0.15.0.dev/_sources/reference/dipy.workflows.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`workflows`
================
.. automodule:: dipy.workflows

.. currentmodule:: dipy.workflows
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.align`
------------------------------
.. automodule:: dipy.workflows.align

.. currentmodule:: dipy.workflows.align
.. autosummary::

   ResliceFlow
   SlrWithQbxFlow
   Workflow
   load_nifti
   load_trk
   reslice
   save_nifti
   slr_with_qbx
   transform_streamlines

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.base`
-----------------------------
.. automodule:: dipy.workflows.base

.. currentmodule:: dipy.workflows.base
.. autosummary::

   IntrospectiveArgumentParser
   NumpyDocString
   get_args_default

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.combined_workflow`
------------------------------------------
.. automodule:: dipy.workflows.combined_workflow

.. currentmodule:: dipy.workflows.combined_workflow
.. autosummary::

   CombinedWorkflow
   Workflow
   iteritems

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.denoise`
--------------------------------
.. automodule:: dipy.workflows.denoise

.. currentmodule:: dipy.workflows.denoise
.. autosummary::

   NLMeansFlow
   Workflow
   estimate_sigma
   load_nifti
   nlmeans
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.docstring_parser`
-----------------------------------------
.. automodule:: dipy.workflows.docstring_parser

.. currentmodule:: dipy.workflows.docstring_parser
.. autosummary::

   NumpyDocString
   Reader
   dedent_lines
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.flow_runner`
------------------------------------
.. automodule:: dipy.workflows.flow_runner

.. currentmodule:: dipy.workflows.flow_runner
.. autosummary::

   IntrospectiveArgumentParser
   get_level
   iteritems
   run_flow

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.io`
---------------------------
.. automodule:: dipy.workflows.io

.. currentmodule:: dipy.workflows.io
.. autosummary::

   IoInfoFlow
   Workflow
   load_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.mask`
-----------------------------
.. automodule:: dipy.workflows.mask

.. currentmodule:: dipy.workflows.mask
.. autosummary::

   MaskFlow
   Workflow
   load_nifti
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.multi_io`
---------------------------------
.. automodule:: dipy.workflows.multi_io

.. currentmodule:: dipy.workflows.multi_io
.. autosummary::

   IOIterator
   basename_without_extension
   common_start
   concatenate_inputs
   connect_output_paths
   get_args_default
   glob
   io_iterator
   io_iterator_
   slash_to_under

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.reconst`
--------------------------------
.. automodule:: dipy.workflows.reconst

.. currentmodule:: dipy.workflows.reconst
.. autosummary::

   ConstrainedSphericalDeconvModel
   CsaOdfModel
   DiffusionKurtosisModel
   ReconstCSAFlow
   ReconstCSDFlow
   ReconstDkiFlow
   ReconstDtiFlow
   ReconstMAPMRIFlow
   TensorModel
   Workflow
   auto_response
   axial_diffusivity
   color_fa
   fractional_anisotropy
   geodesic_anisotropy
   get_mode
   get_sphere
   gradient_table
   literal_eval
   load_nifti
   lower_triangular
   mean_diffusivity
   peaks_from_model
   peaks_to_niftis
   radial_diffusivity
   read_bvals_bvecs
   save_nifti
   save_peaks
   split_dki_param
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.segment`
--------------------------------
.. automodule:: dipy.workflows.segment

.. currentmodule:: dipy.workflows.segment
.. autosummary::

   LabelsBundlesFlow
   MedianOtsuFlow
   RecoBundles
   RecoBundlesFlow
   Workflow
   load_nifti
   load_trk
   median_otsu
   save_nifti
   time

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.stats`
------------------------------
.. automodule:: dipy.workflows.stats

.. currentmodule:: dipy.workflows.stats
.. autosummary::

   SNRinCCFlow
   TensorModel
   Workflow
   binary_dilation
   bounding_box
   gradient_table
   load_nifti
   median_otsu
   read_bvals_bvecs
   save_nifti
   segment_from_cfa

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.tracking`
---------------------------------
.. automodule:: dipy.workflows.tracking

.. currentmodule:: dipy.workflows.tracking
.. autosummary::

   DetTrackPAMFlow
   DeterministicMaximumDirectionGetter
   GenericTrackFlow
   LocalTracking
   ThresholdTissueClassifier
   Tractogram
   Workflow
   load_nifti
   load_peaks
   save

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.workflow`
---------------------------------
.. automodule:: dipy.workflows.workflow

.. currentmodule:: dipy.workflows.workflow
.. autosummary::

   Workflow
   io_iterator_


.. currentmodule:: dipy.workflows


.. currentmodule:: dipy.workflows.align


:class:`ResliceFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResliceFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SlrWithQbxFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SlrWithQbxFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_trk
~~~~~~~~

.. autofunction:: load_trk

reslice
~~~~~~~

.. autofunction:: reslice

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

slr_with_qbx
~~~~~~~~~~~~

.. autofunction:: slr_with_qbx

transform_streamlines
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_streamlines


.. currentmodule:: dipy.workflows.base


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default


.. currentmodule:: dipy.workflows.combined_workflow


:class:`CombinedWorkflow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CombinedWorkflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

iteritems
~~~~~~~~~

.. autofunction:: iteritems


.. currentmodule:: dipy.workflows.denoise


:class:`NLMeansFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NLMeansFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

estimate_sigma
~~~~~~~~~~~~~~

.. autofunction:: estimate_sigma

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

nlmeans
~~~~~~~

.. autofunction:: nlmeans

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.workflows.docstring_parser


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Reader`
~~~~~~~~~~~~~~~


.. autoclass:: Reader
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

dedent_lines
~~~~~~~~~~~~

.. autofunction:: dedent_lines

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.workflows.flow_runner


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

get_level
~~~~~~~~~

.. autofunction:: get_level

iteritems
~~~~~~~~~

.. autofunction:: iteritems

run_flow
~~~~~~~~

.. autofunction:: run_flow


.. currentmodule:: dipy.workflows.io


:class:`IoInfoFlow`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IoInfoFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti


.. currentmodule:: dipy.workflows.mask


:class:`MaskFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: MaskFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.workflows.multi_io


:class:`IOIterator`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IOIterator
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

basename_without_extension
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: basename_without_extension

common_start
~~~~~~~~~~~~

.. autofunction:: common_start

concatenate_inputs
~~~~~~~~~~~~~~~~~~

.. autofunction:: concatenate_inputs

connect_output_paths
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: connect_output_paths

get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default

glob
~~~~

.. autofunction:: glob

io_iterator
~~~~~~~~~~~

.. autofunction:: io_iterator

io_iterator_
~~~~~~~~~~~~

.. autofunction:: io_iterator_

slash_to_under
~~~~~~~~~~~~~~

.. autofunction:: slash_to_under


.. currentmodule:: dipy.workflows.reconst


:class:`ConstrainedSphericalDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSphericalDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CsaOdfModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CsaOdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionKurtosisModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstCSAFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSAFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstCSDFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSDFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstDkiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDkiFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstDtiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDtiFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstMAPMRIFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstMAPMRIFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

auto_response
~~~~~~~~~~~~~

.. autofunction:: auto_response

axial_diffusivity
~~~~~~~~~~~~~~~~~

.. autofunction:: axial_diffusivity

color_fa
~~~~~~~~

.. autofunction:: color_fa

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

geodesic_anisotropy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: geodesic_anisotropy

get_mode
~~~~~~~~

.. autofunction:: get_mode

get_sphere
~~~~~~~~~~

.. autofunction:: get_sphere

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

literal_eval
~~~~~~~~~~~~

.. autofunction:: literal_eval

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

lower_triangular
~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular

mean_diffusivity
~~~~~~~~~~~~~~~~

.. autofunction:: mean_diffusivity

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

peaks_to_niftis
~~~~~~~~~~~~~~~

.. autofunction:: peaks_to_niftis

radial_diffusivity
~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_diffusivity

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

save_peaks
~~~~~~~~~~

.. autofunction:: save_peaks

split_dki_param
~~~~~~~~~~~~~~~

.. autofunction:: split_dki_param

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.workflows.segment


:class:`LabelsBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LabelsBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MedianOtsuFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MedianOtsuFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RecoBundles`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RecoBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_trk
~~~~~~~~

.. autofunction:: load_trk

median_otsu
~~~~~~~~~~~

.. autofunction:: median_otsu

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

time
~~~~

.. autofunction:: time


.. currentmodule:: dipy.workflows.stats


:class:`SNRinCCFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SNRinCCFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

binary_dilation
~~~~~~~~~~~~~~~

.. autofunction:: binary_dilation

bounding_box
~~~~~~~~~~~~

.. autofunction:: bounding_box

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

median_otsu
~~~~~~~~~~~

.. autofunction:: median_otsu

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

segment_from_cfa
~~~~~~~~~~~~~~~~

.. autofunction:: segment_from_cfa


.. currentmodule:: dipy.workflows.tracking


:class:`DetTrackPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DetTrackPAMFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`GenericTrackFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GenericTrackFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LocalTracking`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalTracking
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ThresholdTissueClassifier`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ThresholdTissueClassifier
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Tractogram`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: Tractogram
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_peaks
~~~~~~~~~~

.. autofunction:: load_peaks

save
~~~~

.. autofunction:: save


.. currentmodule:: dipy.workflows.workflow


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

io_iterator_
~~~~~~~~~~~~

.. autofunction:: io_iterator_

