1.5.0/_sources/reference/dipy.workflows.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`workflows`
================
.. automodule:: dipy.workflows

.. currentmodule:: dipy.workflows
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.align`
------------------------------
.. automodule:: dipy.workflows.align

.. currentmodule:: dipy.workflows.align
.. autosummary::

   AffineMap
   ApplyTransformFlow
   CCMetric
   DiffeomorphicMap
   EMMetric
   ImageRegistrationFlow
   MotionCorrectionFlow
   ResliceFlow
   SSDMetric
   SlrWithQbxFlow
   SymmetricDiffeomorphicRegistration
   SynRegistrationFlow
   Workflow
   affine_registration
   check_dimensions
   gradient_table
   load_nifti
   read_bvals_bvecs
   reslice
   save_nifti
   save_qa_metric
   slr_with_qbx
   transform_streamlines
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.base`
-----------------------------
.. automodule:: dipy.workflows.base

.. currentmodule:: dipy.workflows.base
.. autosummary::

   IntrospectiveArgumentParser
   NumpyDocString
   get_args_default
   none_or_dtype

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.combined_workflow`
------------------------------------------
.. automodule:: dipy.workflows.combined_workflow

.. currentmodule:: dipy.workflows.combined_workflow
.. autosummary::

   CombinedWorkflow
   Workflow

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.denoise`
--------------------------------
.. automodule:: dipy.workflows.denoise

.. currentmodule:: dipy.workflows.denoise
.. autosummary::

   GibbsRingingFlow
   LPCAFlow
   MPPCAFlow
   NLMeansFlow
   Patch2SelfFlow
   Workflow
   deprecated_params
   estimate_sigma
   gibbs_removal
   gradient_table
   load_nifti
   localpca
   mppca
   nlmeans
   patch2self
   pca_noise_estimate
   read_bvals_bvecs
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.docstring_parser`
-----------------------------------------
.. automodule:: dipy.workflows.docstring_parser

.. currentmodule:: dipy.workflows.docstring_parser
.. autosummary::

   NumpyDocString
   Reader
   dedent_lines
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.flow_runner`
------------------------------------
.. automodule:: dipy.workflows.flow_runner

.. currentmodule:: dipy.workflows.flow_runner
.. autosummary::

   IntrospectiveArgumentParser
   get_level
   run_flow

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.io`
---------------------------
.. automodule:: dipy.workflows.io

.. currentmodule:: dipy.workflows.io
.. autosummary::

   FetchFlow
   IoInfoFlow
   SplitFlow
   Workflow
   getmembers
   isfunction
   load_nifti
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.mask`
-----------------------------
.. automodule:: dipy.workflows.mask

.. currentmodule:: dipy.workflows.mask
.. autosummary::

   MaskFlow
   Workflow
   load_nifti
   save_nifti

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.multi_io`
---------------------------------
.. automodule:: dipy.workflows.multi_io

.. currentmodule:: dipy.workflows.multi_io
.. autosummary::

   IOIterator
   basename_without_extension
   common_start
   concatenate_inputs
   connect_output_paths
   get_args_default
   glob
   io_iterator
   io_iterator_
   slash_to_under

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.reconst`
--------------------------------
.. automodule:: dipy.workflows.reconst

.. currentmodule:: dipy.workflows.reconst
.. autosummary::

   ConstrainedSphericalDeconvModel
   CsaOdfModel
   DiffusionKurtosisModel
   ReconstCSAFlow
   ReconstCSDFlow
   ReconstDkiFlow
   ReconstDtiFlow
   ReconstIvimFlow
   ReconstMAPMRIFlow
   TensorModel
   Workflow
   IvimModel
   auto_response_ssst
   axial_diffusivity
   color_fa
   deprecated_params
   fractional_anisotropy
   geodesic_anisotropy
   get_mode
   gradient_table
   literal_eval
   load_nifti
   load_nifti_data
   lower_triangular
   mean_diffusivity
   nifti1_symmat
   peaks_from_model
   peaks_to_niftis
   radial_diffusivity
   read_bvals_bvecs
   save_nifti
   save_peaks
   split_dki_param
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.segment`
--------------------------------
.. automodule:: dipy.workflows.segment

.. currentmodule:: dipy.workflows.segment
.. autosummary::

   LabelsBundlesFlow
   MedianOtsuFlow
   RecoBundles
   RecoBundlesFlow
   Space
   StatefulTractogram
   Streamlines
   Workflow
   load_nifti
   load_tractogram
   median_otsu
   save_nifti
   save_tractogram
   time

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.stats`
------------------------------
.. automodule:: dipy.workflows.stats

.. currentmodule:: dipy.workflows.stats
.. autosummary::

   BundleAnalysisTractometryFlow
   BundleShapeAnalysis
   LinearMixedModelsFlow
   SNRinCCFlow
   TensorModel
   Workflow
   anatomical_measures
   assignment_map
   binary_dilation
   bounding_box
   buan_bundle_profiles
   bundle_shape_similarity
   glob
   gradient_table
   load_nifti
   load_peaks
   load_tractogram
   optional_package
   peak_values
   read_bvals_bvecs
   save_nifti
   segment_from_cfa
   time
   transform_streamlines

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.tracking`
---------------------------------
.. automodule:: dipy.workflows.tracking

.. currentmodule:: dipy.workflows.tracking
.. autosummary::

   BinaryStoppingCriterion
   ClosestPeakDirectionGetter
   CmcStoppingCriterion
   DeterministicMaximumDirectionGetter
   LocalFiberTrackingPAMFlow
   LocalTracking
   PFTrackingPAMFlow
   ParticleFilteringTracking
   ProbabilisticDirectionGetter
   Space
   StatefulTractogram
   ThresholdStoppingCriterion
   Workflow
   load_nifti
   load_peaks
   save_tractogram

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.viz`
----------------------------
.. automodule:: dipy.workflows.viz

.. currentmodule:: dipy.workflows.viz
.. autosummary::

   HorizonFlow
   Workflow
   assignment_map
   create_nifti_header
   horizon
   line_colors
   load_nifti
   load_peaks
   load_tractogram
   numpy_to_vtk_colors
   optional_package
   pjoin
   setup_module

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`workflows.workflow`
---------------------------------
.. automodule:: dipy.workflows.workflow

.. currentmodule:: dipy.workflows.workflow
.. autosummary::

   Workflow
   io_iterator_


.. currentmodule:: dipy.workflows


.. currentmodule:: dipy.workflows.align


:class:`AffineMap`
~~~~~~~~~~~~~~~~~~


.. autoclass:: AffineMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ApplyTransformFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ApplyTransformFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CCMetric`
~~~~~~~~~~~~~~~~~


.. autoclass:: CCMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffeomorphicMap`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffeomorphicMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`EMMetric`
~~~~~~~~~~~~~~~~~


.. autoclass:: EMMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ImageRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ImageRegistrationFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MotionCorrectionFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MotionCorrectionFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResliceFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResliceFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SSDMetric`
~~~~~~~~~~~~~~~~~~


.. autoclass:: SSDMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SlrWithQbxFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SlrWithQbxFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SymmetricDiffeomorphicRegistration`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SymmetricDiffeomorphicRegistration
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SynRegistrationFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SynRegistrationFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

affine_registration
~~~~~~~~~~~~~~~~~~~

.. autofunction:: affine_registration

check_dimensions
~~~~~~~~~~~~~~~~

.. autofunction:: check_dimensions

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

reslice
~~~~~~~

.. autofunction:: reslice

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

save_qa_metric
~~~~~~~~~~~~~~

.. autofunction:: save_qa_metric

slr_with_qbx
~~~~~~~~~~~~

.. autofunction:: slr_with_qbx

transform_streamlines
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_streamlines

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.workflows.base


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default

none_or_dtype
~~~~~~~~~~~~~

.. autofunction:: none_or_dtype


.. currentmodule:: dipy.workflows.combined_workflow


:class:`CombinedWorkflow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CombinedWorkflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


.. currentmodule:: dipy.workflows.denoise


:class:`GibbsRingingFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: GibbsRingingFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LPCAFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: LPCAFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MPPCAFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: MPPCAFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`NLMeansFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NLMeansFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Patch2SelfFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Patch2SelfFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

estimate_sigma
~~~~~~~~~~~~~~

.. autofunction:: estimate_sigma

gibbs_removal
~~~~~~~~~~~~~

.. autofunction:: gibbs_removal

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

localpca
~~~~~~~~

.. autofunction:: localpca

mppca
~~~~~

.. autofunction:: mppca

nlmeans
~~~~~~~

.. autofunction:: nlmeans

patch2self
~~~~~~~~~~

.. autofunction:: patch2self

pca_noise_estimate
~~~~~~~~~~~~~~~~~~

.. autofunction:: pca_noise_estimate

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.workflows.docstring_parser


:class:`NumpyDocString`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: NumpyDocString
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Reader`
~~~~~~~~~~~~~~~


.. autoclass:: Reader
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

dedent_lines
~~~~~~~~~~~~

.. autofunction:: dedent_lines

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.workflows.flow_runner


:class:`IntrospectiveArgumentParser`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IntrospectiveArgumentParser
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

get_level
~~~~~~~~~

.. autofunction:: get_level

run_flow
~~~~~~~~

.. autofunction:: run_flow


.. currentmodule:: dipy.workflows.io


:class:`FetchFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: FetchFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IoInfoFlow`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IoInfoFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SplitFlow`
~~~~~~~~~~~~~~~~~~


.. autoclass:: SplitFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

getmembers
~~~~~~~~~~

.. autofunction:: getmembers

isfunction
~~~~~~~~~~

.. autofunction:: isfunction

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.workflows.mask


:class:`MaskFlow`
~~~~~~~~~~~~~~~~~


.. autoclass:: MaskFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti


.. currentmodule:: dipy.workflows.multi_io


:class:`IOIterator`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: IOIterator
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

basename_without_extension
~~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: basename_without_extension

common_start
~~~~~~~~~~~~

.. autofunction:: common_start

concatenate_inputs
~~~~~~~~~~~~~~~~~~

.. autofunction:: concatenate_inputs

connect_output_paths
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: connect_output_paths

get_args_default
~~~~~~~~~~~~~~~~

.. autofunction:: get_args_default

glob
~~~~

.. autofunction:: glob

io_iterator
~~~~~~~~~~~

.. autofunction:: io_iterator

io_iterator_
~~~~~~~~~~~~

.. autofunction:: io_iterator_

slash_to_under
~~~~~~~~~~~~~~

.. autofunction:: slash_to_under


.. currentmodule:: dipy.workflows.reconst


:class:`ConstrainedSphericalDeconvModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ConstrainedSphericalDeconvModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CsaOdfModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CsaOdfModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DiffusionKurtosisModel`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DiffusionKurtosisModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstCSAFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSAFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstCSDFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstCSDFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstDkiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDkiFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstDtiFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstDtiFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstIvimFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstIvimFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ReconstMAPMRIFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ReconstMAPMRIFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

IvimModel
~~~~~~~~~

.. autofunction:: IvimModel

auto_response_ssst
~~~~~~~~~~~~~~~~~~

.. autofunction:: auto_response_ssst

axial_diffusivity
~~~~~~~~~~~~~~~~~

.. autofunction:: axial_diffusivity

color_fa
~~~~~~~~

.. autofunction:: color_fa

deprecated_params
~~~~~~~~~~~~~~~~~

.. autofunction:: deprecated_params

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

geodesic_anisotropy
~~~~~~~~~~~~~~~~~~~

.. autofunction:: geodesic_anisotropy

get_mode
~~~~~~~~

.. autofunction:: get_mode

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

literal_eval
~~~~~~~~~~~~

.. autofunction:: literal_eval

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_nifti_data
~~~~~~~~~~~~~~~

.. autofunction:: load_nifti_data

lower_triangular
~~~~~~~~~~~~~~~~

.. autofunction:: lower_triangular

mean_diffusivity
~~~~~~~~~~~~~~~~

.. autofunction:: mean_diffusivity

nifti1_symmat
~~~~~~~~~~~~~

.. autofunction:: nifti1_symmat

peaks_from_model
~~~~~~~~~~~~~~~~

.. autofunction:: peaks_from_model

peaks_to_niftis
~~~~~~~~~~~~~~~

.. autofunction:: peaks_to_niftis

radial_diffusivity
~~~~~~~~~~~~~~~~~~

.. autofunction:: radial_diffusivity

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

save_peaks
~~~~~~~~~~

.. autofunction:: save_peaks

split_dki_param
~~~~~~~~~~~~~~~

.. autofunction:: split_dki_param

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.workflows.segment


:class:`LabelsBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LabelsBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MedianOtsuFlow`
~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MedianOtsuFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RecoBundles`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`RecoBundlesFlow`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: RecoBundlesFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Space`
~~~~~~~~~~~~~~


.. autoclass:: Space
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StatefulTractogram`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatefulTractogram
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Streamlines`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: Streamlines
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

median_otsu
~~~~~~~~~~~

.. autofunction:: median_otsu

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

save_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: save_tractogram

time
~~~~

.. autofunction:: time


.. currentmodule:: dipy.workflows.stats


:class:`BundleAnalysisTractometryFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleAnalysisTractometryFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`BundleShapeAnalysis`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BundleShapeAnalysis
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LinearMixedModelsFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LinearMixedModelsFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SNRinCCFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SNRinCCFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`TensorModel`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: TensorModel
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

anatomical_measures
~~~~~~~~~~~~~~~~~~~

.. autofunction:: anatomical_measures

assignment_map
~~~~~~~~~~~~~~

.. autofunction:: assignment_map

binary_dilation
~~~~~~~~~~~~~~~

.. autofunction:: binary_dilation

bounding_box
~~~~~~~~~~~~

.. autofunction:: bounding_box

buan_bundle_profiles
~~~~~~~~~~~~~~~~~~~~

.. autofunction:: buan_bundle_profiles

bundle_shape_similarity
~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundle_shape_similarity

glob
~~~~

.. autofunction:: glob

gradient_table
~~~~~~~~~~~~~~

.. autofunction:: gradient_table

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_peaks
~~~~~~~~~~

.. autofunction:: load_peaks

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

peak_values
~~~~~~~~~~~

.. autofunction:: peak_values

read_bvals_bvecs
~~~~~~~~~~~~~~~~

.. autofunction:: read_bvals_bvecs

save_nifti
~~~~~~~~~~

.. autofunction:: save_nifti

segment_from_cfa
~~~~~~~~~~~~~~~~

.. autofunction:: segment_from_cfa

time
~~~~

.. autofunction:: time

transform_streamlines
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: transform_streamlines


.. currentmodule:: dipy.workflows.tracking


:class:`BinaryStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: BinaryStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClosestPeakDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClosestPeakDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CmcStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CmcStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`DeterministicMaximumDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: DeterministicMaximumDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LocalFiberTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalFiberTrackingPAMFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`LocalTracking`
~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: LocalTracking
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`PFTrackingPAMFlow`
~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: PFTrackingPAMFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ParticleFilteringTracking`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ParticleFilteringTracking
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ProbabilisticDirectionGetter`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ProbabilisticDirectionGetter
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Space`
~~~~~~~~~~~~~~


.. autoclass:: Space
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`StatefulTractogram`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: StatefulTractogram
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ThresholdStoppingCriterion`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ThresholdStoppingCriterion
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_peaks
~~~~~~~~~~

.. autofunction:: load_peaks

save_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: save_tractogram


.. currentmodule:: dipy.workflows.viz


:class:`HorizonFlow`
~~~~~~~~~~~~~~~~~~~~


.. autoclass:: HorizonFlow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

assignment_map
~~~~~~~~~~~~~~

.. autofunction:: assignment_map

create_nifti_header
~~~~~~~~~~~~~~~~~~~

.. autofunction:: create_nifti_header

horizon
~~~~~~~

.. autofunction:: horizon

line_colors
~~~~~~~~~~~

.. autofunction:: line_colors

load_nifti
~~~~~~~~~~

.. autofunction:: load_nifti

load_peaks
~~~~~~~~~~

.. autofunction:: load_peaks

load_tractogram
~~~~~~~~~~~~~~~

.. autofunction:: load_tractogram

numpy_to_vtk_colors
~~~~~~~~~~~~~~~~~~~

.. autofunction:: numpy_to_vtk_colors

optional_package
~~~~~~~~~~~~~~~~

.. autofunction:: optional_package

pjoin
~~~~~

.. autofunction:: pjoin

setup_module
~~~~~~~~~~~~

.. autofunction:: setup_module


.. currentmodule:: dipy.workflows.workflow


:class:`Workflow`
~~~~~~~~~~~~~~~~~


.. autoclass:: Workflow
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

io_iterator_
~~~~~~~~~~~~

.. autofunction:: io_iterator_

